# haruspex

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DECISIONS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/src/haruspex_server/: __init__.py  cli.py  worker.py
backend/src/haruspex_server/api/: __init__.py  app.py  context.py  deps.py  middleware.py  ratelimit.py
backend/src/haruspex_server/api/routers/: __init__.py  admin_keys.py  copilot.py  events.py  health.py  ingest.py  ledger.py  policies.py  runs.py  stream.py
backend/src/haruspex_server/api/schemas/: __init__.py  calibration.py  common.py  copilot.py  events.py  ingest.py  keys.py  ledger.py  policies.py  runs.py
backend/src/haruspex_server/copilot/: __init__.py  agent.py  prompt.py  tools.py
backend/src/haruspex_server/core/: config.py  errors.py  logging.py  security.py
backend/src/haruspex_server/db/: __init__.py  base.py  models.py  notify.py  session.py
backend/src/haruspex_server/db/migrations/: env.py
backend/src/haruspex_server/db/migrations/versions/: d071b9820b4e_initial_schema.py
backend/src/haruspex_server/forecaster/: __init__.py  calibration.py  curve_head.py  curves.py  divergence.py  forecast.py  lttb.py  smoothing.py  types.py
backend/src/haruspex_server/ledger/: __init__.py  accounting.py  prices.py
backend/src/haruspex_server/policies/: __init__.py  evaluator.py  schema.py
backend/src/haruspex_server/services/: __init__.py  calibration.py  events.py  forecasts.py  health.py  ingest.py  keys.py  ledger.py  metrics.py  policies.py  runs.py
backend/src/haruspex_server/stream/: __init__.py  hub.py
backend/tests/: conftest.py  test_package.py
backend/tests/api/: conftest.py  test_auth.py  test_calibration.py  test_copilot.py  test_health_endpoints.py  test_ingest.py  test_ingest_property.py  test_keys.py  test_ledger.py  test_policies.py  test_runs.py  test_stream.py  test_worker.py
backend/tests/forecaster_behavioral/: test_behavioral.py
backend/tests/unit/: test_health_taxonomy.py  test_ledger_math.py  test_lttb.py  test_ratelimit.py  test_security.py
backend/tests/unit/forecaster/: test_calibration.py  test_curve_head.py  test_curves.py  test_divergence.py  test_forecast.py  test_smoothing.py
backend/tests/unit/policies/: test_evaluator.py  test_schema.py
deploy/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
examples/: train_char_gpt.py
frontend/: DESIGN.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/e2e/: demo.spec.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
frontend/src/components/: AppShell.tsx  BrierSparkline.tsx  ConnectGate.test.tsx  ConnectGate.tsx  CopilotPanel.test.tsx  CopilotPanel.tsx  DryRunDrawer.tsx  EmptyState.tsx  EventTimeline.tsx  ForecastComponentsPanel.tsx  KillConfirmDialog.test.tsx  KillConfirmDialog.tsx  LedgerTable.tsx  PageHeader.tsx  PolicyEditor.test.tsx  PolicyEditor.tsx  PrognosisFan.tsx  ReliabilityDiagram.tsx  (+8 more)
scripts/: check_no_placeholders.sh  contract.sh  demo_seed.py  eslint_staged.sh  smoke.sh
sdk/: README.md  pyproject.toml
sdk/src/haruspex/: __init__.py  client.py  errors.py  run.py
sdk/src/haruspex/callbacks/: __init__.py  lightning.py  transformers.py
sdk/src/haruspex/simulate/: __init__.py  cli.py  generators.py
sdk/tests/: conftest.py  test_callbacks.py  test_client.py  test_generators.py  test_package.py  test_run.py  test_simulate_cli.py
(+28 files in other folders)
