[project]
name = "haruspex-server"
version = "0.1.0"
description = "Haruspex API and worker: forecasts ML training run outcomes, enforces kill policies, accounts recovered GPU spend."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
    "httpx>=0.28",
    "numpy>=2.1",
    "scipy>=1.14",
    "scikit-learn>=1.6",
    "anthropic>=0.40",
    "jsonschema>=4.23",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "hypothesis>=6.120",
    "schemathesis>=3.39",
    "mypy>=1.14",
    "ruff>=0.9",
    "pre-commit>=4.0",
    "asgi-lifespan>=2.1",
    "types-jsonschema>=4.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/haruspex_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Import from src directly: on macOS, uv re-flags the venv UF_HIDDEN on every
# install and CPython >= 3.12.13 then skips the editable-install .pth files.
# The sdk src is included for the forecaster behavioral suite (simulator
# generators) and kill-loop integration tests.
pythonpath = ["src", "../sdk/src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.coverage.run]
source = ["haruspex_server"]
branch = true
# SQLAlchemy's asyncio bridge runs ORM work inside greenlets; without this,
# line tracing silently drops after the first DB await in a coroutine.
concurrency = ["greenlet", "thread"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

# Full --strict flag set for the scientific core (mypy disallows `strict` inside
# per-module overrides, so the flags are enumerated).
[[tool.mypy.overrides]]
module = ["haruspex_server.forecaster.*", "haruspex_server.policies.*"]
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
check_untyped_defs = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true

[[tool.mypy.overrides]]
module = ["scipy.*", "sklearn.*", "asyncpg.*"]
ignore_missing_imports = true
