[project]
name = "haruspex"
version = "0.1.0"
description = "Python SDK for Haruspex: instrument ML training runs for live outcome forecasting, kill policies, and cost accounting."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "httpx>=0.28",
    "numpy>=2.1",
]

[project.scripts]
haruspex-simulate = "haruspex.simulate.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "hypothesis>=6.120",
    "mypy>=1.14",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/haruspex"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["haruspex"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
strict = true
